add fatal warnings